--- a/Hippo/InternalClasses/Views/PaymentMessageCell/PaymentMessageCell.xib
+++ b/Hippo/InternalClasses/Views/PaymentMessageCell/PaymentMessageCell.xib
@@ -1,25 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="116" id="KGk-i7-Jjw" customClass="PaymentMessageCell" customModule="Hippo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="116"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="186" id="KGk-i7-Jjw" customClass="PaymentMessageCell" customModule="Hippo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="186"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="116"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="186"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dCs-4n-CYg">
+                        <rect key="frame" x="10" y="10" width="300" height="18"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6aV-9h-UTc">
+                                <rect key="frame" x="269.5" y="2" width="28.5" height="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6aV-9h-UTc" firstAttribute="top" secondItem="dCs-4n-CYg" secondAttribute="top" constant="2" id="8xM-n6-zk1"/>
+                            <constraint firstAttribute="height" constant="18" id="Vcx-iV-vWc"/>
+                            <constraint firstAttribute="bottom" secondItem="6aV-9h-UTc" secondAttribute="bottom" constant="2" id="gkI-8X-dXz"/>
+                            <constraint firstAttribute="trailing" secondItem="6aV-9h-UTc" secondAttribute="trailing" constant="2" id="qAK-bM-9b0"/>
+                        </constraints>
+                    </view>
                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FNz-rV-sPb">
-                        <rect key="frame" x="10" y="10" width="300" height="100"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <rect key="frame" x="10" y="28" width="300" height="100"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="100" id="NXH-SD-xlb"/>
                         </constraints>
@@ -27,17 +46,27 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="FNz-rV-sPb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="H2d-nI-CLf"/>
-                    <constraint firstItem="FNz-rV-sPb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="VF5-Rm-hUG"/>
+                    <constraint firstItem="dCs-4n-CYg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="LLU-83-iU4"/>
+                    <constraint firstAttribute="trailing" secondItem="dCs-4n-CYg" secondAttribute="trailing" constant="10" id="bWk-kE-bRO"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="FNz-rV-sPb" secondAttribute="bottom" id="beN-mw-gkk"/>
+                    <constraint firstItem="dCs-4n-CYg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="e7n-zq-3Xg"/>
+                    <constraint firstItem="FNz-rV-sPb" firstAttribute="top" secondItem="dCs-4n-CYg" secondAttribute="bottom" id="fYS-zi-sFF"/>
                     <constraint firstAttribute="trailing" secondItem="FNz-rV-sPb" secondAttribute="trailing" constant="10" id="mkg-e9-Lb4"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="heightConstraint" destination="NXH-SD-xlb" id="tcw-Nw-Zh7"/>
+                <outlet property="nameLbl" destination="6aV-9h-UTc" id="9wL-kB-qEA"/>
+                <outlet property="nameView" destination="dCs-4n-CYg" id="B4N-LV-S75"/>
                 <outlet property="tableView" destination="FNz-rV-sPb" id="XtP-IC-z6x"/>
             </connections>
-            <point key="canvasLocation" x="214" y="133"/>
+            <point key="canvasLocation" x="213.04347826086959" y="109.15178571428571"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
