--- a/Hippo/UIView/TableViewCell/OutgoingDocumentCell/OutgoingDocumentTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/OutgoingDocumentCell/OutgoingDocumentTableViewCell.xib
@@ -1,53 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OutgoingDocumentTableViewCell" rowHeight="89" id="3k0-3D-sdf" customClass="OutgoingDocumentTableViewCell" customModule="Hippo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="482" height="89"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OutgoingDocumentTableViewCell" rowHeight="126" id="3k0-3D-sdf" customClass="OutgoingDocumentTableViewCell" customModule="Hippo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="507" height="126"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3k0-3D-sdf" id="zjI-Be-hGr">
-                <rect key="frame" x="0.0" y="0.0" width="482" height="89"/>
+                <rect key="frame" x="0.0" y="0.0" width="507" height="126"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WLI-iR-66a">
+                        <rect key="frame" x="60" y="3" width="437" height="18"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xLJ-9D-LkE">
+                                <rect key="frame" x="406.5" y="2" width="28.5" height="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="xLJ-9D-LkE" firstAttribute="top" secondItem="WLI-iR-66a" secondAttribute="top" constant="2" id="Nxa-xB-Igl"/>
+                            <constraint firstAttribute="height" constant="18" id="UAf-A0-Klv"/>
+                            <constraint firstAttribute="bottom" secondItem="xLJ-9D-LkE" secondAttribute="bottom" constant="2" id="jus-D1-4rm"/>
+                            <constraint firstAttribute="trailing" secondItem="xLJ-9D-LkE" secondAttribute="trailing" constant="2" id="nI3-ED-0oX"/>
+                        </constraints>
+                    </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Xx-wu-YLB">
-                        <rect key="frame" x="60" y="3" width="412" height="83"/>
+                        <rect key="frame" x="60" y="24" width="437" height="86.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n1A-YW-XDC">
-                                <rect key="frame" x="10" y="3" width="397" height="17"/>
+                                <rect key="frame" x="10" y="3" width="422" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="unsent_watch_icon" translatesAutoresizingMaskIntoConstraints="NO" id="mse-1e-shm">
-                                <rect key="frame" x="391" y="66" width="16" height="12"/>
+                                <rect key="frame" x="416" y="69.5" width="16" height="12"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="12" id="Iap-TC-xTk"/>
                                     <constraint firstAttribute="width" constant="16" id="V7b-x9-XdP"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VWY-ob-bke">
-                                <rect key="frame" x="361.5" y="64.5" width="26.5" height="15"/>
+                                <rect key="frame" x="386.5" y="68" width="26.5" height="15"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pdf" translatesAutoresizingMaskIntoConstraints="NO" id="ztX-W5-9g1">
-                                <rect key="frame" x="10" y="30" width="26" height="26"/>
+                                <rect key="frame" x="10" y="33.5" width="26" height="26"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="26" id="2we-y8-edI"/>
                                     <constraint firstAttribute="width" constant="26" id="b8k-f7-oVE"/>
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="255" verticalHuggingPriority="255" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" editable="NO" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YqL-M5-74v" customClass="HippoTextView" customModule="Hippo" customModuleProvider="target">
-                                <rect key="frame" x="10" y="61" width="392" height="0.0"/>
+                                <rect key="frame" x="10" y="64.5" width="417" height="0.0"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -58,7 +76,7 @@
                                 <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EOC-cr-V9m">
-                                <rect key="frame" x="362" y="24" width="40" height="30"/>
+                                <rect key="frame" x="387" y="27.5" width="40" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="trI-ne-CGo"/>
                                 </constraints>
@@ -67,10 +85,10 @@
                                 </connections>
                             </button>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="A1c-Jx-XjM">
-                                <rect key="frame" x="372" y="29" width="20" height="20"/>
+                                <rect key="frame" x="397" y="32.5" width="20" height="20"/>
                             </activityIndicatorView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="3l0-0c-Y6K">
-                                <rect key="frame" x="44" y="35" width="33" height="16"/>
+                                <rect key="frame" x="44" y="38.5" width="33" height="16"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWb-4P-IIW">
                                         <rect key="frame" x="0.0" y="0.0" width="33" height="16"/>
@@ -81,7 +99,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IoN-q3-4i6">
-                                <rect key="frame" x="10" y="66" width="28.5" height="13.5"/>
+                                <rect key="frame" x="10" y="69.5" width="28.5" height="13.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -116,7 +134,7 @@
                         </constraints>
                     </view>
                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RAN-Be-5LZ">
-                        <rect key="frame" x="16" y="22.5" width="44" height="44"/>
+                        <rect key="frame" x="16" y="45.5" width="44" height="44"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8SG-po-laR">
                                 <rect key="frame" x="7" y="7" width="30" height="30"/>
@@ -150,9 +168,10 @@
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="facebookIcon" translatesAutoresizingMaskIntoConstraints="NO" id="UYz-Nu-IdQ">
-                        <rect key="frame" x="35" y="61" width="25" height="25"/>
+                        <rect key="frame" x="35" y="85.5" width="25" height="25"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="UYz-Nu-IdQ" secondAttribute="height" multiplier="1:1" id="KKG-Gr-mJO"/>
+                            <constraint firstAttribute="width" secondItem="UYz-Nu-IdQ" secondAttribute="height" multiplier="1:1" id="gk4-7r-jOF"/>
                             <constraint firstAttribute="height" constant="25" id="qn0-z2-RTe"/>
                         </constraints>
                     </imageView>
@@ -160,13 +179,15 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="4Xx-wu-YLB" secondAttribute="trailing" constant="10" id="3pC-lk-vNB"/>
-                    <constraint firstItem="4Xx-wu-YLB" firstAttribute="top" secondItem="zjI-Be-hGr" secondAttribute="top" constant="3" id="8aP-Lr-3Ob"/>
+                    <constraint firstItem="WLI-iR-66a" firstAttribute="leading" secondItem="4Xx-wu-YLB" secondAttribute="leading" id="AQP-LE-Vhh"/>
                     <constraint firstItem="UYz-Nu-IdQ" firstAttribute="bottom" secondItem="4Xx-wu-YLB" secondAttribute="bottom" id="LZr-0N-5sR"/>
+                    <constraint firstItem="WLI-iR-66a" firstAttribute="top" secondItem="zjI-Be-hGr" secondAttribute="top" constant="3" id="OcV-fd-Sbu"/>
                     <constraint firstItem="RAN-Be-5LZ" firstAttribute="centerY" secondItem="4Xx-wu-YLB" secondAttribute="centerY" id="WuM-oP-LV8"/>
+                    <constraint firstItem="4Xx-wu-YLB" firstAttribute="top" secondItem="WLI-iR-66a" secondAttribute="bottom" constant="3" id="c1R-ew-M5q"/>
                     <constraint firstItem="4Xx-wu-YLB" firstAttribute="leading" secondItem="RAN-Be-5LZ" secondAttribute="trailing" id="giy-FF-zcT"/>
-                    <constraint firstItem="UYz-Nu-IdQ" firstAttribute="width" secondItem="UYz-Nu-IdQ" secondAttribute="height" multiplier="1:1" id="gk4-7r-jOF"/>
                     <constraint firstItem="4Xx-wu-YLB" firstAttribute="leading" secondItem="zjI-Be-hGr" secondAttribute="leading" constant="60" id="hZP-Ri-gZk"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="4Xx-wu-YLB" secondAttribute="bottom" constant="3" id="qpK-0R-7iI"/>
+                    <constraint firstItem="4Xx-wu-YLB" firstAttribute="trailing" secondItem="WLI-iR-66a" secondAttribute="trailing" id="tZF-g4-Gib"/>
                     <constraint firstItem="4Xx-wu-YLB" firstAttribute="leading" secondItem="UYz-Nu-IdQ" secondAttribute="trailing" id="zT3-Sc-2NZ"/>
                 </constraints>
             </tableViewCellContentView>
@@ -179,13 +200,15 @@
                 <outlet property="docName" destination="LWb-4P-IIW" id="TnW-W4-cxa"/>
                 <outlet property="fileSizeLabel" destination="IoN-q3-4i6" id="1dN-Tl-HiG"/>
                 <outlet property="nameLabel" destination="n1A-YW-XDC" id="Iwl-hu-NTo"/>
+                <outlet property="nameLbl" destination="xLJ-9D-LkE" id="IRA-0h-CB3"/>
+                <outlet property="nameView" destination="WLI-iR-66a" id="h4B-eG-1Tj"/>
                 <outlet property="retryButton" destination="EOC-cr-V9m" id="LBS-p5-pHI"/>
                 <outlet property="sourceIcon" destination="UYz-Nu-IdQ" id="fnh-mr-aXa"/>
                 <outlet property="textView" destination="YqL-M5-74v" id="qZl-Ca-beJ"/>
                 <outlet property="tickImage" destination="mse-1e-shm" id="zjh-oO-3zG"/>
                 <outlet property="timeLabel" destination="VWY-ob-bke" id="l92-Vh-GAG"/>
             </connections>
-            <point key="canvasLocation" x="136.23188405797103" y="22.433035714285712"/>
+            <point key="canvasLocation" x="154.34782608695653" y="-27.455357142857142"/>
         </tableViewCell>
     </objects>
     <resources>
