--- a/Hippo/UIView/TableViewCell/SelfMessageTableViewCell/SelfMessageTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/SelfMessageTableViewCell/SelfMessageTableViewCell.xib
@@ -1,43 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="SelfMessageTableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="SelfMessageTableViewCell" rowHeight="109" id="3C7-pA-zEk" customClass="SelfMessageTableViewCell" customModule="Hippo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="281" height="109"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="SelfMessageTableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="SelfMessageTableViewCell" rowHeight="165" id="3C7-pA-zEk" customClass="SelfMessageTableViewCell" customModule="Hippo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="341" height="165"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3C7-pA-zEk" id="1ex-sp-f9D">
-                <rect key="frame" x="0.0" y="0.0" width="281" height="109"/>
+                <rect key="frame" x="0.0" y="0.0" width="341" height="165"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zRm-ci-UkK" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
-                        <rect key="frame" x="147.5" y="11" width="125" height="52.5"/>
+                        <rect key="frame" x="207.5" y="28.5" width="125" height="91"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hxj-9Y-swx">
-                        <rect key="frame" x="149" y="7" width="122" height="55"/>
+                        <rect key="frame" x="209" y="24.5" width="122" height="93.5"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="751" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" text="jhsdh" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="z42-eL-Oml">
-                                <rect key="frame" x="10" y="5" width="45.5" height="41"/>
+                                <rect key="frame" x="10" y="5" width="45.5" height="79.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ipH-IM-FTG">
-                                <rect key="frame" x="65.5" y="38" width="26.5" height="12"/>
+                                <rect key="frame" x="65.5" y="76.5" width="26.5" height="12"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="readMessageImage" translatesAutoresizingMaskIntoConstraints="NO" id="hJh-ZE-L50">
-                                <rect key="frame" x="96" y="38" width="16" height="12"/>
+                                <rect key="frame" x="96" y="76.5" width="16" height="12"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="12" id="7R4-Oy-8B0"/>
                                     <constraint firstAttribute="width" constant="16" id="93J-Pq-Hwu"/>
@@ -56,23 +56,23 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VGR-ha-gOM">
-                        <rect key="frame" x="0.0" y="64" width="281" height="45"/>
+                        <rect key="frame" x="0.0" y="120" width="341" height="45"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="warningIcon" translatesAutoresizingMaskIntoConstraints="NO" id="dL2-Ya-uaD" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
-                                <rect key="frame" x="82" y="3" width="16" height="16"/>
+                                <rect key="frame" x="142" y="3" width="16" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="16" id="1Ju-aF-wy5"/>
                                     <constraint firstAttribute="width" secondItem="dL2-Ya-uaD" secondAttribute="height" multiplier="1:1" id="hdy-i6-072"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Couldn't send the message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJ0-lR-oj6" customClass="So_CustomLabel" customModule="Hippo" customModuleProvider="target">
-                                <rect key="frame" x="100" y="3" width="176" height="16"/>
+                                <rect key="frame" x="160" y="3" width="176" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TFk-xx-xPe">
-                                <rect key="frame" x="148.5" y="4" width="70" height="44"/>
+                                <rect key="frame" x="208.5" y="4" width="70" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="QkM-6v-3M5"/>
                                 </constraints>
@@ -85,7 +85,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v2h-Tp-nwf">
-                                <rect key="frame" x="234" y="4" width="42" height="44"/>
+                                <rect key="frame" x="294" y="4" width="42" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="0wg-2L-tao"/>
                                 </constraints>
@@ -98,7 +98,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" | " textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="03p-Yq-a9Q">
-                                <rect key="frame" x="220.5" y="17.5" width="11.5" height="17"/>
+                                <rect key="frame" x="280.5" y="17.5" width="11.5" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -121,28 +121,48 @@
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="21K-oK-uLQ">
-                        <rect key="frame" x="124" y="37" width="25" height="25"/>
+                        <rect key="frame" x="184" y="93" width="25" height="25"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="21K-oK-uLQ" secondAttribute="height" multiplier="1:1" id="1qb-qk-72f"/>
                             <constraint firstAttribute="height" constant="25" id="EtJ-WH-KY1"/>
                         </constraints>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R24-nj-cVk">
+                        <rect key="frame" x="209" y="7" width="122" height="17.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4To-wN-rzn">
+                                <rect key="frame" x="91.5" y="2" width="28.5" height="13.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="4To-wN-rzn" secondAttribute="bottom" constant="2" id="98C-gP-uSM"/>
+                            <constraint firstAttribute="trailing" secondItem="4To-wN-rzn" secondAttribute="trailing" constant="2" id="e93-2U-HHg"/>
+                            <constraint firstItem="4To-wN-rzn" firstAttribute="top" secondItem="R24-nj-cVk" secondAttribute="top" constant="2" id="jrC-tM-t4w"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
+                    <constraint firstAttribute="trailing" secondItem="R24-nj-cVk" secondAttribute="trailing" constant="10" id="2T1-kR-SCC"/>
                     <constraint firstItem="VGR-ha-gOM" firstAttribute="leading" secondItem="1ex-sp-f9D" secondAttribute="leading" id="2fe-Q0-GYK"/>
                     <constraint firstAttribute="bottom" secondItem="VGR-ha-gOM" secondAttribute="bottom" id="IQb-nA-idX"/>
                     <constraint firstAttribute="trailing" secondItem="Hxj-9Y-swx" secondAttribute="trailing" constant="10" id="OPq-jO-kal"/>
                     <constraint firstItem="zRm-ci-UkK" firstAttribute="leading" secondItem="Hxj-9Y-swx" secondAttribute="leading" constant="-1.5" id="RXv-Z2-L9X"/>
                     <constraint firstItem="Hxj-9Y-swx" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1ex-sp-f9D" secondAttribute="leading" constant="60" id="UcF-pS-bKz"/>
                     <constraint firstItem="zRm-ci-UkK" firstAttribute="trailing" secondItem="Hxj-9Y-swx" secondAttribute="trailing" constant="1.5" id="WKE-IZ-Jmm"/>
+                    <constraint firstItem="R24-nj-cVk" firstAttribute="top" secondItem="1ex-sp-f9D" secondAttribute="top" constant="7" id="X6m-Tc-0OA"/>
+                    <constraint firstItem="Hxj-9Y-swx" firstAttribute="leading" secondItem="R24-nj-cVk" secondAttribute="leading" id="Yzg-xe-gXA"/>
                     <constraint firstItem="Hxj-9Y-swx" firstAttribute="leading" secondItem="21K-oK-uLQ" secondAttribute="trailing" id="dDq-sJ-W8N"/>
+                    <constraint firstItem="Hxj-9Y-swx" firstAttribute="top" secondItem="R24-nj-cVk" secondAttribute="bottom" id="efL-zf-fN7"/>
                     <constraint firstItem="VGR-ha-gOM" firstAttribute="top" secondItem="Hxj-9Y-swx" secondAttribute="bottom" constant="2" id="hIc-VD-GQe"/>
                     <constraint firstItem="zRm-ci-UkK" firstAttribute="top" secondItem="Hxj-9Y-swx" secondAttribute="top" constant="4" id="iyI-0t-PT1"/>
                     <constraint firstItem="zRm-ci-UkK" firstAttribute="bottom" secondItem="Hxj-9Y-swx" secondAttribute="bottom" constant="1.5" id="jt0-xq-mYf"/>
                     <constraint firstItem="21K-oK-uLQ" firstAttribute="bottom" secondItem="Hxj-9Y-swx" secondAttribute="bottom" id="lr7-ZB-TZs"/>
                     <constraint firstItem="VGR-ha-gOM" firstAttribute="centerX" secondItem="1ex-sp-f9D" secondAttribute="centerX" id="qre-vx-Rch"/>
-                    <constraint firstItem="Hxj-9Y-swx" firstAttribute="top" secondItem="1ex-sp-f9D" secondAttribute="top" constant="7" id="uAB-bW-xNx"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -150,19 +170,21 @@
                 <outlet property="bgView" destination="Hxj-9Y-swx" id="NZE-KN-Wo0"/>
                 <outlet property="bottomConstraint" destination="IQb-nA-idX" id="kYx-NQ-anQ"/>
                 <outlet property="cannelButtonOutlet" destination="v2h-Tp-nwf" id="1q8-3Q-6Gr"/>
+                <outlet property="nameLbl" destination="4To-wN-rzn" id="HrC-Lf-Eem"/>
+                <outlet property="nameView" destination="R24-nj-cVk" id="aau-Kn-FhP"/>
                 <outlet property="readUnreadImageView" destination="hJh-ZE-L50" id="Wcf-3d-Nsc"/>
                 <outlet property="retryButtonOutlet" destination="TFk-xx-xPe" id="xfC-AP-WCA"/>
                 <outlet property="selfMessageTextView" destination="z42-eL-Oml" id="rbO-bc-weT"/>
                 <outlet property="shadowView" destination="zRm-ci-UkK" id="jML-a7-utT"/>
                 <outlet property="sourceIcon" destination="21K-oK-uLQ" id="xXy-ms-EhE"/>
                 <outlet property="timeLabel" destination="ipH-IM-FTG" id="rui-5i-o0O"/>
-                <outlet property="topConstraint" destination="uAB-bW-xNx" id="yop-hg-IcA"/>
+                <outlet property="topConstraint" destination="X6m-Tc-0OA" id="D9B-sB-i5e"/>
                 <outlet property="warningImage" destination="dL2-Ya-uaD" id="aJE-VG-di9"/>
                 <outlet property="warningLabel" destination="PJ0-lR-oj6" id="8Am-Y0-99T"/>
                 <outlet property="warningView" destination="VGR-ha-gOM" id="nR6-le-TD6"/>
                 <outlet property="warningViewHeightConstraint" destination="UC1-kv-6Bw" id="kO0-rO-PZh"/>
             </connections>
-            <point key="canvasLocation" x="245.6521739130435" y="33.816964285714285"/>
+            <point key="canvasLocation" x="289.13043478260875" y="52.566964285714285"/>
         </tableViewCell>
     </objects>
     <resources>
